# sapphire.rs

./: .gitignore  CLAUDE.md  CODING_RULES.md  LAPIDARY.md  README.md  SAPPHIRE.md  cargo.toml
crates/fragment/: Cargo.toml
crates/fragment-cli/: Cargo.toml
crates/fragment-cli/src/: main.rs
crates/fragment/src/: apply.rs  diff.rs  engine.rs  init.rs  lib.rs  main.rs  utils.rs
crates/fragment/src/cli/: mod.rs
crates/sapphire/: Cargo.toml
crates/sapphire-cli/: Cargo.toml
crates/sapphire-cli/src/: lib.rs  main.rs
crates/sapphire-core/: Cargo.toml
crates/sapphire-core/src/: cli.rs  lib.rs
crates/sapphire-core/src/core/: config.rs  mod.rs
crates/sapphire-core/src/fragment/: apply.rs  diff.rs  init.rs  parser.rs
crates/sapphire-core/src/logging/: error.rs
crates/sapphire-core/src/sapphire/: apply.rs  init.rs
crates/sapphire-core/src/shard/: apply.rs  diff.rs  manifest.rs  mod.rs  package.rs  package_processor.rs
crates/sapphire-core/src/utils/: logger.rs  mod.rs
crates/sapphire/src/: bootstrap.rs  lib.rs  main.rs  mod.rs  setup.rs  utils.rs  validate.rs
crates/sapphire/src/cli/: mod.rs
crates/shard/: Cargo.toml
crates/shard-cli/: Cargo.toml
crates/shard-cli/src/: main.rs
crates/shard/src/: apply.rs  brew_client.rs  diff.rs  init.rs  lib.rs  main.rs  manage.rs  migrate.rs  mod.rs  package.rs  package_processor.rs
crates/shard/src/brew/: client.rs  core.rs  installer.rs  mod.rs  search.rs  validate.rs
crates/shard/src/cli/: cli.rs  mod.rs
crates/shard/src/core/: manifest.rs  mod.rs
crates/shard/src/package/: mod.rs  operations.rs  processor.rs
crates/shard/src/shard/: apply.rs  diff.rs  init.rs  manager.rs  mod.rs
crates/shard/src/utils/: filesystem.rs  helpers.rs  mod.rs  observability.rs  validate.rs
examples/: compact.toml  user.toml
src/: bin.rs  cli.rs  main.rs
src/core/: error.rs
src/fragment/: engine.rs  mod.rs
src/sapphire/: manager.rs  setup.rs
src/shard/: apply.rs  brew_client.rs  init.rs  manage.rs  manifest.rs  migrate.rs  package.rs  package_processor.rs  search.rs
src/utils/: fs.rs  validation.rs
~/.sapphire/fragments/: user
~/.sapphire/manifests/: user_apps.yaml
