[package]
name = "sapphire-cli"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Knott <alexander.knott@posteo.de>"]
description = "CLI for Sapphire system management tool"

[dependencies]
sapphire-core = { path = "../sapphire-core" }
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
tracing = "0.1.41"