[package]
name = "sapphire-core"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Knott <alexander.knott@posteo.de>"]
description = "Core library for Sapphire system management suite"

[dependencies]
anyhow = "1.0.96"
thiserror = "2.0.11"
dirs = "5.0.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.10.4"
lazy_static = "1.4.0"
shellexpand = "3.1.0"