[package]
name = "shard"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Knott <alexander.knott@posteo.de>"]
description = "Package management tool for macOS using Homebrew"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
console = "0.15.10"
dialoguer = "0.11.0"
chrono = { version = "0.4.35", features = ["serde"] }
indicatif = "0.17.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
toml = "0.8.20"
shellexpand = "3.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.58"
lazy_static = "1.4.0"
regex = "1.10.4"

[[bin]]
name = "shard"
path = "src/main.rs" 